# pymesh

./: .gitmodules  CMakeLists.txt
.github/workflows/: main.yml
cpp/io/: CMakeLists.txt  logger.cc
cpp/io/cmake/: IOConfig.cmake
cpp/io/include/: logger.h
cpp/math/: CMakeLists.txt
cpp/math/cmake/: MathConfig.cmake
cpp/math/include/: expression.hh
cpp/mesh/: CMakeLists.txt  elements.cc  mesh.cc  meshing.cc  segment.cc  system.cc
cpp/mesh/include/: attribute.h  elements.h  hash.hh  mesh.h  segment.h  simplexcontainer.hh  system.h  types.h  utils.hh
py/mesh/: CMakeLists.txt  pymesh.cc
